--- a/index2.css
+++ b/index2.css
@@ -46,7 +46,7 @@ button {
     border-radius: 5px;
     color: #fff;
     font-weight: bold;
-    margin-top: 5rem;
+    margin-top: 3rem;
 }
 
 button a:hover{
@@ -56,7 +56,7 @@ button a:hover{
 @media screen  {
     form{
         max-width: 1800px;
-        width: 406, 650;
+        width: 406px;
         display: block;
         align-items: center;
     }
